--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,10 +36,12 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.10",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "babel-preset-react": "^6.24.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0"
   }
 }
